# Pac-Man

./: .gitignore  CMakeLists.txt  DOCUMENTAZIONE.md  INFO.md  README.md  TBD.md  TODO.md
Tappa_1/: DOCUMENTAZIONE.md  README.md
Tappa_1/includes/: global_values.hpp
Tappa_1/src/: main.cpp
Tappa_10/: README.md
Tappa_10/includes/: Animation.hpp  GameState.hpp  textures.hpp
Tappa_10/includes/fruits/: Grape.hpp
Tappa_10/src/: Animation.cpp  GameState.cpp  MainMenuState.cpp  StateManager.cpp
Tappa_10/src/fruits/: Apple.cpp
Tappa_11/: README.md
Tappa_11/includes/: GameMenu.hpp  textures.hpp
Tappa_11/src/: Animation.cpp  Debug.cpp  GameState.cpp  Ghost.cpp  LevelSelectorState.cpp  MainMenuState.cpp  PacMan.cpp  StateManager.cpp  TextUI.cpp  textures.cpp
Tappa_11/src/fruits/: Orange.cpp  Strawberry.cpp
Tappa_11/src/ghosts/: Inky.cpp
Tappa_12/: README.md
Tappa_12/includes/core/: Animation.hpp  Debug.hpp
Tappa_12/includes/game_elements/: Fruit.hpp  GameState.hpp  Ghost.hpp  PacMan.hpp
Tappa_12/includes/lib/: TileFactory.hpp  textures.hpp
Tappa_12/includes/map_editor/: Create.hpp
Tappa_12/resources/maps/: PROVa_limiti.txt  mit.txt
Tappa_12/src/: GameMenu.cpp  LevelSelectorState.cpp  MainMenuState.cpp
Tappa_12/src/core/: Debug.cpp
Tappa_12/src/game_elements/: Fruit.cpp  GameState.cpp  Ghost.cpp  PacMan.cpp
Tappa_12/src/lib/: TextUI.cpp  TileFactory.cpp
Tappa_12/src/map_editor/: Create.cpp  MapEditor.cpp
Tappa_13/: README.md
Tappa_13/includes/game_elements/: GameState.hpp  Ghost.hpp  PacMan.hpp
Tappa_13/includes/lib/: textures.hpp
Tappa_13/includes/map_editor/: Create.hpp
Tappa_13/resources/maps/: Mappa_2.txt  mit.txt
Tappa_13/src/: LevelSelectorState.cpp  MainMenuState.cpp  main.cpp
Tappa_13/src/core/: Animation.cpp
Tappa_13/src/game_elements/: GameState.cpp  Ghost.cpp  PacMan.cpp
Tappa_13/src/lib/: TileFactory.cpp
Tappa_14/: README.md
Tappa_14/includes/game_elements/: GameState.hpp  PacMan.hpp
Tappa_14/includes/lib/: SoundManager.hpp  textures.hpp
Tappa_14/includes/map_editor/: Create.hpp
Tappa_14/resources/maps/: MAPPA_1.txt
Tappa_14/src/: GameMenu.cpp  LevelSelectorState.cpp  MainMenuState.cpp  main.cpp
Tappa_14/src/core/: StateManager.cpp
Tappa_14/src/game_elements/: Fruit.cpp  GameState.cpp  PacMan.cpp
Tappa_14/src/lib/: SoundManager.cpp
Tappa_15/: README.md
Tappa_15/includes/: GameMenu.hpp  LevelSelectorState.hpp  MainMenuState.hpp
Tappa_15/includes/core/: StateManager.hpp  TileFactory.hpp
Tappa_15/includes/game_elements/: Fruit.hpp  GameState.hpp  Ghost.hpp
Tappa_15/includes/lib/: Debug.hpp  TileFactory.hpp  global_values.hpp  textures.hpp
Tappa_15/includes/map_editor/: Create.hpp  MapEditor.hpp
Tappa_15/includes/scenario_editor/: ScenarioEditor.hpp
Tappa_15/includes/ui/: GameMenu.hpp  text_ui.hpp
Tappa_15/resources/maps/: MAPPA_1.txt  Mappa_2.txt  mit.txt  prova copy 3.txt  prova copy 4.txt
Tappa_15/resources/scenarios/: CUSTOMSCEN.txt  MYSCEN.txt  classic.txt  custom_name.txt  scenario1.txt  scenario2.txt
Tappa_15/src/: GameMenu.cpp  LevelSelectorState.cpp  MainMenuState.cpp  main.cpp
Tappa_15/src/core/: SoundManager.cpp  StateManager.cpp  TileFactory.cpp
Tappa_15/src/game_elements/: Fruit.cpp  GameState.cpp  Ghost.cpp  PacMan.cpp
Tappa_15/src/lib/: Debug.cpp  SoundManager.cpp  textures.cpp
Tappa_15/src/map_editor/: Create.cpp  MapEditor.cpp
Tappa_15/src/scenario_editor/: ScenarioEditor.cpp
Tappa_15/src/ui/: GameMenu.cpp  TextUI.cpp
Tappa_2/: README.md
Tappa_2/includes/: textures.hpp
Tappa_2/resources/: default_map.txt
Tappa_2/src/: main.cpp
Tappa_3/: README.md
Tappa_3/includes/: textures.hpp
Tappa_3/src/: main.cpp
Tappa_4/: CMakeLists.txt  README.md
Tappa_4/includes/: State.hpp  global_values.hpp  text_ui.hpp  textures.hpp
Tappa_4/resources/: default_map.txt
Tappa_4/src/: main.cpp
Tappa_5/: README.md
Tappa_5/includes/: PacMan.hpp  textures.hpp
Tappa_5/includes/ghosts/: Clyde.hpp  Pinky.hpp
Tappa_5/src/: Ghost.cpp  PacMan.cpp  main.cpp
Tappa_5/src/ghosts/: Clyde.cpp  Pinky.cpp
Tappa_6/: README.md
Tappa_6/includes/: textures.hpp
Tappa_6/src/: Ghost.cpp  PacMan.cpp  State.cpp  main.cpp
Tappa_6/src/ghosts/: Blinky.cpp
Tappa_7/: README.md
Tappa_7/includes/: PacMan.hpp  text_ui.hpp  textures.hpp
Tappa_7/src/: Ghost.cpp  PacMan.cpp  main.cpp  textures.cpp
Tappa_8/: README.md
Tappa_8/includes/: State.hpp  textures.hpp
Tappa_8/includes/ghosts/: Blinky.hpp  Clyde.hpp  Inky.hpp
Tappa_8/src/: Ghost.cpp  PacMan.cpp  State.cpp  main.cpp
Tappa_8/src/fruits/: Galaxian.cpp  Key.cpp
Tappa_8/src/ghosts/: Clyde.cpp  Pinky.cpp
Tappa_9/: README.md
Tappa_9/includes/: Debug.hpp  Fruit.hpp  Ghost.hpp  MainMenuState.hpp  textures.hpp
Tappa_9/src/: Fruit.cpp  GameState.cpp  MainMenuState.cpp  StateManager.cpp  TextUI.cpp  main.cpp
assets/: default_map.txt
includes/: Fruit.hpp  GameMenu.hpp  GameState.hpp  Ghost.hpp  LevelSelectorState.hpp  MainMenuState.hpp  MapEditorState.hpp  PacMan.hpp  PauseMenu.hpp  State.hpp  StateManager.hpp  global_values.hpp  text_ui.hpp  textures.hpp
includes/core/: Animation.hpp  Debug.hpp  StateManager.hpp
includes/game_elements/: Fruit.hpp  GameState.hpp  Ghost.hpp  PacMan.hpp
includes/ghosts/: Blinky.hpp  Clyde.hpp  Inky.hpp  Pinky.hpp
includes/lib/: TileFactory.hpp  global_values.hpp  text_ui.hpp  textures.hpp
includes/map_editor/: Create.hpp  MapEditor.hpp
resources/: default_map.txt
resources/maps/: cc.txt  classic.txt
src/: Animation.cpp  Fruit.cpp  GameMenu.cpp  GameState.cpp  Ghost.cpp  LevelSelectorState.cpp  MainMenuState.cpp  MapEditorState.cpp  PacMan.cpp  PauseMenu.cpp  State.cpp  StateManager.cpp  TextUI.cpp  main.cpp  textures.cpp  textures.hpp
src/core/: Animation.cpp  Debug.cpp  StateManager.cpp
src/fruits/: Bell.cpp  Cherry.cpp  Grape.cpp
src/game_elements/: Fruit.cpp  GameState.cpp  Ghost.cpp  PacMan.cpp
src/ghosts/: Blinky.cpp  Clyde.cpp  Inky.cpp  Pinky.cpp
src/lib/: TextUI.cpp  TileFactory.cpp
src/map_editor/: Create.cpp  MapEditor.cpp
(+54 files in other folders)
